# minerelay

./: .env.example  .gitignore  .prettierignore  AGENTS.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.md  NOTICE.md  README.md  SECURITY.md  TRADEMARKS.md  agent.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release.config.json  temp-server.json  tsconfig.base.json  turbo.json
.github/: pull_request_template.md
.github/instructions/: commit.instructions.md
.github/workflows/: admin-build.yml  api-build.yml  fancymenu-sandbox-build.yml  launcher-build.yml  launcher-release.yml  mod-build.yml  semantic-release.yml
.husky/: commit-msg  pre-commit  pre-push
apps/admin/: .env.example  CHANGELOG.md  Dockerfile  package.json  tsconfig.json  vite.config.ts  vitest.config.ts  wrangler.jsonc
apps/admin/app/: layout.tsx
apps/admin/scripts/: run-vinext.mjs
apps/admin/worker/: index.ts
apps/api/: .env.example  .prettierignore  CHANGELOG.md  Dockerfile  eslint.config.mjs  nest-cli.json  package.json  tsconfig.build.json  tsconfig.json
apps/api/prisma/: schema.prisma  seed.ts
apps/api/scripts/: build-admin-client.mjs  rotate-admin-password.ts
apps/api/src/: app-metadata.ts  (+5 more)
apps/fancymenu-sandbox/: Dockerfile  package.json  tsconfig.json
apps/launcher/: .env.example  CHANGELOG.md  README.md  eslint.config.mjs  index.html  launcher.runtime.example.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
apps/launcher/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/launcher/src-tauri/capabilities/: default.json
apps/launcher/src-tauri/icons/: icon.icns
apps/launcher/src-tauri/src/: background_runtime.rs  commands.rs  config.rs  error.rs  events.rs  lib.rs  main.rs  state.rs  types.rs  utils.rs
apps/launcher/src-tauri/src/instance/: mod.rs  servers_dat.rs
apps/launcher/src-tauri/src/launcher_apps/: bootstrap.rs  detection.rs  mod.rs  selection.rs  spawn.rs  types.rs  windows.rs
apps/launcher/src-tauri/src/launcher_control/: auth.rs  controls.rs  device.rs  mod.rs  pairing.rs
apps/launcher/src-tauri/src/notifications/: mod.rs
apps/launcher/src-tauri/src/profile/: mod.rs
apps/launcher/src-tauri/src/providers/: mod.rs
apps/launcher/src-tauri/src/runtime/: mod.rs
apps/launcher/src-tauri/src/session/: mod.rs
apps/launcher/src-tauri/src/settings/: mod.rs
apps/launcher/src-tauri/src/sync/: mod.rs
apps/launcher/src-tauri/src/telemetry/: mod.rs
infra/sample-data/: profile.lock.json  profile.meta.json
infra/scripts/: package.json  tsconfig.json
scripts/: check-staged-format.mjs  validate-commit-msg.mjs
(+241 files in other folders)
