[package]
name = "mvl-syncer"
version = "0.1.0"
description = "Minecraft Server Syncer"
authors = ["MVL"]
edition = "2021"

[lib]
name = "mvl_syncer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
dirs = "6.0.0"
fastnbt = "2.6.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
hex = "0.4.3"
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"] }
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sysinfo = "0.30.13"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
