[package]
name = "minerelay-launcher"
version = "0.3.2"
description = "MineRelay"
authors = ["MineRelay Team"]
edition = "2021"

[lib]
name = "minerelay_launcher_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
default = []
devtools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
dirs = "6.0.0"
ed25519-dalek = "2.1.1"
fastnbt = "2.6.0"
flate2 = "1.1.2"
futures-util = "0.3.31"
hex = "0.4.3"
parking_lot = "0.12.4"
reqwest = { version = "0.12.23", default-features = false, features = ["json", "stream", "rustls-tls"] }
rand = "0.8.5"
rfd = "0.15.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
sysinfo = "0.30.13"
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-deep-link = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread", "fs", "io-util", "sync", "time"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
zip = { version = "2.2.1", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
